--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>React Redux Starter Kit</title>
+  <title>User Viewer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link href="https://unpkg.com/basscss/css/basscss.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/basscss-btn/css/btn.css" rel="stylesheet">
+  <link href="https://unpkg.com/basscss-btn-primary/css/btn-primary.css" rel="stylesheet">
+  <link href="https://unpkg.com/basscss-forms/css/forms.css" rel="stylesheet">
+  <link href="https://unpkg.com/basscss-colors/css/colors.css" rel="stylesheet">
+  <link href="https://unpkg.com/basscss-background-colors/css/background-colors.css" rel="stylesheet">
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
