Just a basic bullshit nav and form, I'll wire in writes on the plane or something

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,7 @@
   <title>User Viewer</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://unpkg.com/basscss/css/basscss.min.css" rel="stylesheet">
-  <link href="https://unpkg.com/basscss-btn/css/btn.css" rel="stylesheet">
-  <link href="https://unpkg.com/basscss-btn-primary/css/btn-primary.css" rel="stylesheet">
-  <link href="https://unpkg.com/basscss-forms/css/forms.css" rel="stylesheet">
-  <link href="https://unpkg.com/basscss-colors/css/colors.css" rel="stylesheet">
-  <link href="https://unpkg.com/basscss-background-colors/css/background-colors.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
 </head>
 <body>
   <div id="root" style="height: 100%"></div>
